Ripanga overflow issue fix (#129)

--- a/tables/ripanga/src/Ripanga.scss
+++ b/tables/ripanga/src/Ripanga.scss
@@ -8,7 +8,6 @@ $tableZ: 0;
   border: 1px solid #c3c2c2;
   border-width: 0 1px 0 1px;
   box-sizing: border-box;
-  overflow: hidden;
   padding-right: 100px;
   position: relative;
 
